--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -103,6 +103,12 @@ body.logged-in.ocp .navbar-header .col-xs-12.col-sm-9{
 
 }
 
+
+.date{
+	font-weight: 600;
+}
+
+
 body{
 	color:#59595A;
 
@@ -5006,7 +5012,7 @@ body{
 
 						.views-field-view-node{
 							position: relative;
-							margin-left: 206px;
+							margin-left: 230px;
 							float: left;
 							clear: both;
 							margin-top: -2em;
@@ -5035,6 +5041,7 @@ body{
 
 .views-field-field-start-date-1{
 	padding-top: 0.5em;
+	font-weight: 600;
 }
 
 .add-to-calendar{
