--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -3451,7 +3451,7 @@ p.no-results{
 	}
 	.region-content{
 		#block-system-main{
-			.view-events-search .view-content:nth-child(2) .views-row{
+			.view-events-search .view-content .views-row{
 				padding-top: 20px;
 				padding-bottom: 30px;
 				min-height: 230px;
@@ -8157,7 +8157,7 @@ span.form-required{
 }
 
 span.date-display-single{
-	font-weight: bold;
+	font-weight: 600;
 }
 
 .page-node-129 #block-osha-newsletter-osha-newsletter-subscribe-extra div.captcha{
