--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -3604,7 +3604,7 @@ p.no-results{
 				.views-field-field-start-date-1{
 					font-size: 1em;
 					margin-bottom: 0.5em;
-					font-weight: bold;
+					font-weight: 600;
 					color: #57575a;
 				}
 				.views-field-field-country-code, .views-field-field-city{
