--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -3608,7 +3608,7 @@ p.no-results{
 					color: #57575a;
 				}
 				.views-field-field-country-code, .views-field-field-city{
-					font-weight: bold;
+					font-weight: 600;
 					display: inline-block;
 					color: #57575a;
 				}
