--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -3803,13 +3803,13 @@ div.workbench-info-block{
 		}
 
 		.views-field-field-start-date{
-			font-weight: bold;
+			font-weight: 600;
 			color: #57575a;
 		}
 
 		.views-field-field-country-code, .views-field-field-city{
 			float: left;
-			font-weight: bold;
+			font-weight: 600;
 			color: #57575a;
 		}
 
