--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -5780,7 +5780,7 @@ body.press-room, body.european-week{
 
 	.view-frontpage-events{
 		.city, .country{
-			font-weight: bold;
+			font-weight: 600;
 		}
 		.country{
 			float: left;
@@ -5808,8 +5808,8 @@ body.press-room, body.european-week{
 		.views-row-last{
 			border-bottom: 0 solid #B0B1B2;
 		}
-
-		.date-display-single{
+ 
+		.date-display-single , .date{
 			float: none;
 			width: 100%;
 			display: block;
@@ -8073,7 +8073,7 @@ body.page-tools-and-publications-practical-tools{
 
 	.view-frontpage-events{
 		.city, .country{
-			font-weight: bold;
+			font-weight: 600;
 		}
 		.country{
 			float: left;
