--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -105,6 +105,8 @@ body.logged-in.ocp .navbar-header .col-xs-12.col-sm-9{
 
 
 .date{
+	display: block;
+	width: 100%;
 	font-weight: 600;
 }
 
@@ -1656,6 +1658,7 @@ aside.col-md-3{
 	    }
     }
   }
+
   li.expanded{
   	background-color: transparent;
   	padding: 0;
@@ -1702,7 +1705,7 @@ aside.col-md-3{
 	font-weight: 600;
 	&:before{
 		display: block;
-  		content: ' '!important;
+  		content: ' ';
 		width: 15px;
 		height: 15px;
 		border-radius: 10px;
@@ -1727,6 +1730,20 @@ aside.col-md-3{
 		right: 14px;
     	top: 10px;
   }
+
+  li.expanded.active-trail.active > a{
+  	&:before{
+		content: "\e252";
+	    font-family: "Glyphicons Halflings";
+	    float: right;
+	    vertical-align: middle;
+	    color: #003399;
+	    background-color: transparent;
+	    top: 10px;
+		right: 13px;
+	}
+  }
+
 }
 
 #block-menu-block-5{
@@ -3940,6 +3957,13 @@ div.workbench-info-block{
 /* Types partnet special styles */
 
 /*OCP mission statement*/
+
+.panels-flexible-row-partner_detail-4-inside{
+	display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+}
+
 body.ocp .box-type-partner{
 	width: 100%;
 	background: url('../images/background-fop.png') no-repeat;
@@ -4169,6 +4193,7 @@ body.ocp{
 			color: #003399;
 			font-weight: 600;
 			margin-right: 10px;
+			margin-bottom: 10px;
 		}
 		.pane-content{
 			float: left;
@@ -4185,6 +4210,8 @@ body.ocp{
 		padding-top: 0 !important;
 		margin-right: 2em;
 		clear: none;
+		display: flex;
+    	flex-wrap: nowrap;
 		.pane-title{
 			float: left;
 			text-transform: uppercase;
@@ -4194,6 +4221,8 @@ body.ocp{
 			color: #003399;
 			font-weight: 600;
 			margin-right: 10px;
+			display: flex;
+   			align-items: center;
 		}
 		.pane-content{
 			float: left;
@@ -4587,6 +4616,7 @@ body{
 	float: left;
 	width: 100%;
 	height: 392px;
+	margin-top: 1em;
 	h3{
 		padding-bottom: 1em;
 	}
@@ -4747,6 +4777,21 @@ body{
     	top: 29px;
     }
 } 
+
+.page-node-184{
+	.related-resources{
+		width: 100%;
+		.direction-column{
+			flex-direction: row;
+		}
+	}
+
+	.related-resources-boxes{
+		div{
+    		width: 27%;
+		}
+	}
+}
 
 
 #block-views-partners-block-2, #block-views-partners-block-3{
@@ -7810,6 +7855,7 @@ body.page-tools-and-publications-practical-tools{
     	border-top: 2px solid #bcd75b;
     	border-bottom: 2px solid #bcd75b;
     	padding: 1em;
+    	margin-top: 16px;
     	margin-bottom: 2em;
     	span{
 			display: block;
