--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -639,6 +639,9 @@ ul.time-and-counters li .counter-label {
   border-bottom: 0;
 }
 /*Splash events*/
+.event_country {
+  background: url(../images/events/big/default-calendar-180x180.png) no-repeat center;
+}
 .code_EN {
   background: url(../images/events/big/England-180x180.png) no-repeat center;
 }
@@ -746,6 +749,12 @@ ul.time-and-counters li .counter-label {
 }
 .code_CY {
   background: url(../images/events/big/Republic-of-Cyprus-180x180.png) no-repeat center;
+}
+.code_US {
+  background: url(../images/events/big/eeuu-180x180.png) no-repeat center;
+}
+.code_CA {
+  background: url(../images/events/big/Canada-180x180.png) no-repeat center;
 }
 .code_US {
   background: url(../images/events/big/eeuu-180x180.png) no-repeat center;
