--- a/docroot/sites/all/themes/hwc_frontend/css/hwc_override.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc_override.css
@@ -227,7 +227,7 @@ div.workbench-info-block {
     color: #003399;
     background-color: transparent;
     font-weight: bold;
-    font-style: italic;
+    font-style: normal;
 }
 .pane-hwc-practical-tool-hwc-practical-tool-listing .access-tool-link:before {
     content: ">";
@@ -242,7 +242,7 @@ div.workbench-info-block {
     text-align: left;
     font-weight: normal;
     font-size: 30px;
-    font-style: italic;
+    font-style: normal;
     margin-bottom: 1em;
     margin-top: 1em;
 }
