--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -739,6 +739,10 @@ ul.time-and-counters{
 
 /*Splash events*/
 
+.event_country {
+    background: url(../images/events/big/default-calendar-180x180.png) no-repeat center;
+}
+
 .code_EN{
 	background: url(../images/events/big/England-180x180.png) no-repeat center;
 }
@@ -846,6 +850,12 @@ ul.time-and-counters{
 }
 .code_CY{
 	background: url(../images/events/big/Republic-of-Cyprus-180x180.png) no-repeat center;
+}
+.code_US{
+	background: url(../images/events/big/eeuu-180x180.png) no-repeat center;
+}
+.code_CA{
+	background: url(../images/events/big/Canada-180x180.png) no-repeat center;
 }
 .code_US{
 	background: url(../images/events/big/eeuu-180x180.png) no-repeat center;
